tests/ui/repr/repr-empty-packed.stderr
error: `#[repr]` attribute cannot be used on enums
  --> $DIR/repr-empty-packed.rs:5:1
   |
LL | #[repr(packed)]
   | ^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can be applied to structs and unions

error: unused attribute
  --> $DIR/repr-empty-packed.rs:4:1
   |
LL | #[repr()]
   | ^^^^^^^^^ help: remove this attribute
   |
   = note: using `repr` with an empty list has no effect
note: the lint level is defined here
  --> $DIR/repr-empty-packed.rs:2:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

